@@ -1,7 +1,7 @@
-DIST epson-inkjet-printer-escpr2-1.1.45-1lsb3.2.i486.rpm 3188341 BLAKE2B 4b74149c06da3c72c799aa5774a004cb7482a869f71a45a023dd9dc7b11eb037c8d57159cd12a119a57fb8788427c8a05b24be662b3be2b7de36a0d9d89a5a12 SHA512 e9197dc14d855150ee6eb29e750b66bf2efe30878d7e1e5e4ba9aac02e095491307fb8dafc161d56e11311f742072d5b7ca5b946ddb43ef5da76dc86920f47d1
-DIST epson-inkjet-printer-escpr2-1.1.45-1lsb3.2.x86_64.rpm 3187642 BLAKE2B 3d738c5d0f022139509f2883d78deb7d939e8cd4cc3168c1e312a58ff3229a7631adac0ea2136412d5a16abd50a7fd4ecff448f979ef56e6c3dc51eb82b99377 SHA512 279abffea921e68c2548ac41bdf578df4f84529c5d3c39ab0d680e2c8b879e89ed73a62ade5d1386dba092edbb83368e7ebdd3ba7beca8b985257497d7bbda35
-DIST epson-inkjet-printer-escpr2-1.1.46-1lsb3.2.i486.rpm 3196998 BLAKE2B de09c0b0bdaf20e7fe5aa203e6993758bacf625a641c9aa815ebd5b71e5b7c62d6a047c6789a11d7598f07f8fa264c6ed685d31a1794a282e8a7e421f564e359 SHA512 2841e72cf49d74b12b2e40828771a1d4ad6b8d074ba3c6d9824d5425b9ec6adcf9caf59cf103c0c9f3def1b0c8902b77b8224b0f354573c004d39a332e7b185d
-DIST epson-inkjet-printer-escpr2-1.1.46-1lsb3.2.x86_64.rpm 3196527 BLAKE2B bb55fd896d99d26e5d85b2ce53d5e3e1bd27bb91942d1b1806b4bd9af8ac73e9cd64ebee0d3b2b4dc5eaae5cdcda0fb648e96650ac1992c0bbe435c057173e3c SHA512 9b9b36924ad7de932155426c55188c4c39d582410249b9eb2fd1e961b0121504900c559592a604dc72e21ab9c91bdc96c088c75cf641778c0c10acd62148d829
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.45.ebuild 1670 BLAKE2B 99d28ed3bd22af74b74e414d6c6775be07233bd8a415c90e883c7115d35278a17066586d84193200e5d6df5f5d3971dbccca5fd4f0a460c0805b7f9c591930d6 SHA512 557ace1c41f23dbafa41aa9744584ea98acece07650b9ff3875e8022f7af130938defa4753433fb7b0c1d413090245d055b2eba7c5467a530cc986fde9892fd0
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.46.ebuild 1670 BLAKE2B 8d7bc30de763febc15ee8eb2d7791733977340eff3b0ecc3f3ee66183cd0dd0de12e45de96a0c369d1b647e0733d04e823d0e1f7494fb11944b38603d90a5252 SHA512 36266ec8ca4985119c20d0f48d0367092b86b3ff73be60f124687ed6f4ddb4f748e9bc93a7cc7907b88ad9d9df97b8d3032af7c4f3e520852b10d851266412c2
+DIST epson-inkjet-printer-escpr2-1.1.47-1lsb3.2.i486.rpm 3343039 BLAKE2B 3059b7093904d45140a20ab54408879a75bbff3e0d3b402b02eaf0998aeacfbd5c76984ea8cb2df58cc6057f390b9740416e132bcebe75da26729887556f2265 SHA512 771bf43db3026b7de9c3b031f3d59aeeee852664ce818df26f37681e5ddbd2edde6ca2fbb901a735e7d45827dd55d788103a9f542c8fca4ae78382ca98005f61
+DIST epson-inkjet-printer-escpr2-1.1.47-1lsb3.2.x86_64.rpm 3342447 BLAKE2B fc100ed64011151f6a8b9fa0d44633c8c432bec9af5ce2448dccc89e73b3da5bc81908d2ff7a6f4d1899f3f73951a9433e84b03c21304772333afea00b2b7897 SHA512 732011f15439fef60af917252baf2bf4dcf04aafcbfe3044aa794d84488bc0c18afc36484483150c0abf3f73ce36c57a9c5ed27177518bba28f42efdafdc2f26
+DIST epson-inkjet-printer-escpr2-1.1.48-1lsb3.2.i486.rpm 3362000 BLAKE2B 272cc08d3d436fd8595081c2063f4b386dc3737c822848a02b4365db4bbde9145c55d7ee39d2ba70fa9a1658a59cb7bd6893437e18bd1d32c1d4fb840591d371 SHA512 5c0ea55a1b87af7d411f54393445b7c3aa12f9426bed2d4db8849c8b2198495334c7d27666dc50745facb373059a9081b8229a6c16446895278d86e5a54bf089
+DIST epson-inkjet-printer-escpr2-1.1.48-1lsb3.2.x86_64.rpm 3361333 BLAKE2B 290709df620bb0de04e323c40bec195ce94ec4111b4e16c1ba7049e8ed0448b4a58e562451d58927e2febfe871de91adcccb67cdaf94205d39e3761216249b5c SHA512 bcb64e49f48cd14ca49add1bcf01ed2df59bd4621907c86bb321ab03c8a0fd15dd9036d02a685302292e35460331ec909ac8455b669f2271a88f636b83a53c9a
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.47.ebuild 1670 BLAKE2B f1a30027ae300165327ba79361c84ef39a9a2587d6eaa2bbdcfd3a2a22eece2ad50051389f774f2c880f1a502be602148f6bf12cbe2def5d14966e6bbcbb2598 SHA512 6997485b5a3287319b4edc79524b65824726cf2503d77b9e15dc2c186ff09268cc0fb7569e1217a775d618de621c843e0910f304647ca78d9279c56cc80dfae8
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.48.ebuild 1670 BLAKE2B 2ba706240b4b5806c14d6c489744de9efda91196bc659626ea8b904adee87b7d4a8b061a9320deb0b374fc06f319b7037df0674fd1b1c0cb139865748b23f0c0 SHA512 6e7845ffda41be44185cfed5175b53db4721ded14dedb93e3f28e43502d88d8eedb58c6cf784afc6e69942c793ed9d1e3410d5ff7b00045b8fb7e61f6847bb47
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
