@@ -1,6 +1,6 @@
 AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
-DIST epson-inkjet-printer-escpr2-1.1.46.tar.gz 4501044 BLAKE2B 4afe797e92b80bb6be0f34339752a80de62f8e06ddd880fce4424ac3f13934fa55b4dab8af7977f196fc9080733296cf00a744b99ca49eeeb23cc5d11bbe0183 SHA512 21d17b9ee27d4c561a733cf17ab6b09419cc1a255ed7d008f9804d23eb789b422d194cccf9dbf9ee09ff8b2c027e4930f1d21a2f1b57bd1b618ad031f16c1e0b
 DIST epson-inkjet-printer-escpr2-1.1.47.tar.gz 4618284 BLAKE2B 6572f8247b275efc166cadcdb6adc4f3156023f2ba8e5cdafe15a70afc7de2dac34300725c1a5d77ebe9be117cb6ceca5240e584efba13752556abe956eb8473 SHA512 36528c2ce35c7e0dadfaa431c859a4defaa565b4d34d33fcadac509a11caa2f5b023243de9f95cec33125058c4e9c9ed6644d90d5f0fa1f13c2d4c2fe75c09fb
-EBUILD epson-inkjet-printer-escpr2-1.1.46.ebuild 1319 BLAKE2B 6b711596056f4e9ebdff0212474b46c4f7fb59a0b479ad8630359b2290698c7d07f032878ef51ea6f5e28fa362e36c05f965a5786c9afc5198b19ca5a195f2ca SHA512 32656868e988cf1f376728f95a10fb1c52438b1b6cf313830521cf1111038fd9b701c2a44298ef27ea0066153ed9c875924b462d63ce4c21649edf7b911dd011
+DIST epson-inkjet-printer-escpr2-1.1.48.tar.gz 4636233 BLAKE2B 61ffd33fa9a148a42749c1afa7f9c125fba0f5f8399e607dc235334bd4594e30c7675736cd936fb6ec091e6fbf281a8d567970c83791525ac91e47b1fdb4434d SHA512 a382323d39e531a3dab1d611a77cfb2ae8fdc7322a774e9ef9992be1817ed8ba121448132df293afd7eee4ded1fb8fb8004e0147e98858155d648ee7a1232810
 EBUILD epson-inkjet-printer-escpr2-1.1.47.ebuild 1319 BLAKE2B f44e011001c44d0c679d213c896006dad5d1f09a84a670a28573b9493fb5a6a5125fc456e5f000e5e4a0be51edc2cf04de066bab8790bfa69df15887a89bb2fe SHA512 1bbe4b7c7bf91f58b124fe6028417708f68bfafb0ddd2eb9b4eb035db8860be107dc9b3b7b7417eae3edb7ceb0fd7f21e54dca0a75684fe86a2ab78a14aeb14a
+EBUILD epson-inkjet-printer-escpr2-1.1.48.ebuild 1319 BLAKE2B fd0a30029a5db287b076f3333d5a156b08bac617957967af42b39294776e587911707003f3d232b8f6afc4388f2e10efa21876deb19e6c29cc9a530d2d75551c SHA512 2c1d3ee2f7a4624dcc0673aabbadf715bf9c26838d59a7a69392e2d4d5171eac962fcefe923d5169f21ee68789ca93e4621531058e82b31fad24a8c288ae8339
 MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
